<resources>
    <string name="app_name">Event Registration</string>
    <string name="action_settings">Settings</string>
    <string name="newparticipant_hint">Who?</string>
    <string name="newparticipant_button">ADD PARTICIPANT</string>
    <string name="newevent_date_label">Date?</string>
    <string name="newevent_date_value">01-01-2016</string>
    <string name="participantspinner_label">Participant?</string>
    <string name="newevent_hint">Event name?</string>
    <string name="newevent_start_label">Start time?</string>
    <string name="newevent_end_label">End time?</string>
    <string name="newevent_start_first">12:00</string>
    <string name="newevent_end_first">13:00</string>
    <string name="newevent_button">ADD EVENT</string>
    <string name="eventspinner_label">Event?</string>
    <string name="newpair_button">REGISTER</string>
</resources>
